# drift-inspector

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
artifacts/: robustness_grid.csv  robustness_grid_table.tex
artifacts/audit/: encoder_ablation_results.csv  encoder_ablation_signs.csv  extractor_ablation_JUDGE_FINDINGS.md  extractor_ablation_STOP_FINDINGS.md  extractor_ablation_stop_results.csv
artifacts/baseline/: acc_clusters_emnlp.csv  full_comparison_table.tex  stop_alignment_table.csv
artifacts/human_validation/: README.md  annotator_sheet-1.csv  annotator_sheet-2.csv  annotator_sheet-3.csv  judge_results.csv
artifacts/robustness/: headline_significance_trajectories.csv  tfidf_representation_assignment.csv
data/claims_sources/: manifest.json
data/claims_sources/aacl_all/: claims.csv  papers.csv
data/clusters/: acc_clusters.csv  cluster_names.json  sent_clusters.csv
inspector/: index.html
inspector-emnlp/: index.html
inspector-emnlp/css/: inspector.css
inspector-emnlp/data/: acc_data.json
inspector-emnlp/js/: app.js  cluster.js  compare.js  data.js
inspector/data/: acc_core.json
inspector/js/: compare.js  map.js  trends.js
landing/: README.md  index.html
notebooks/: README.md  analysis.ipynb  baseline_comparison.ipynb  human_validation.ipynb
src/acc/: __init__.py  assign.py  authors.py  cli.py  cluster.py  clustering.py  config.py  corpus.py  download.py  drift.py  embed.py  export.py  extract.py  figures.py  inspector.py  judge.py  llm.py  naming.py  project.py  prompts.py  robustness.py  status.py  tui.py
(+8 files in other folders)
