[project]
name = "atomic-claims-analysis"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=3.0.1",
    "openai>=2.28.0",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.6.0",
    "matplotlib>=3.9.0",
    "plotly>=5.0.0",
    "nbformat>=5.10.4",
    "ipykernel>=6.0.0",
    "torch>=2.0.0",
    "acl-anthology>=1.0.0",
    "transformers==4.51.3",
    "sentence-transformers>=3.0.0",
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.33",
    "adapters==1.2.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
    "gensim>=4.3",
    "bertopic>=0.16",
    "nltk>=3.9",
    "numpy>=2.4.6",
    "rich>=13.0",
    "nbclient>=0.11.0",
    "nbconvert>=7.17.1",
    "textual>=0.60",
]

[project.scripts]
acc = "acc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acc"]

[tool.uv]
package = true
